acrecimento de div

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <h6>Título</h6>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus magni illo sint pariatur commodi excepturi beatae nisi expedita, numquam facilis dolor qui voluptate, velit nihil labore quis molestias hic quisquam.</p>
+
+    <div>  
+        <label for=""> Digite seu E-mail</label>
+        <input type="email" name="" id="" placeholder="Digite o seu e-mail aqui">
+        <button>CLIQUE AQUI</button>
+    </div>
 </body>
 </html>
